--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
 </head>
 <body>  
+
   <form name="login-form" class="login-form" >
     <div class="form-title">
       <h2>account login</h2>
@@ -21,18 +22,20 @@
       <label for="password">password</label>
       <input type="password" name="password" id="password" required minlength="6" maxlength="16">
     </div>
-    <div>
-      <input type="checkbox" name="remember-me" id="remember-me" required>
-      <label for="remember-me">Remember Me</label>
+    <div class="form-footer">
+      <div >
+        <input type="checkbox" name="remember-me" id="remember-me" required>
+        <label for="remember-me">Remember Me</label>
+      </div>
       <div>
       <a href="#">Forgot Password?</a>
     </div>
     </div>
-    <input type="submit" value="log in">
+    <input type="submit" class="button" value="log in">
   </form>
 
 
-  <form name="form-greate-account" class="form-greate"></form>
+  <!-- <form name="form-greate-account" class="form-greate"></form>
   <div class="form-title">
     <h2>register account</h2>
     <button>X</button>
@@ -53,9 +56,9 @@
     <label for="email">email address</label>
   <input type="email" name="email" id="email" required>
 </div>
-  <input type="submit" value="register">
+  <input type="submit" value="register"> -->
 
-  <form name="remember-password-form" class="remember-form" >
+  <!-- <form name="remember-password-form" class="remember-form" >
     <div class="form-title">
       <h2>remember password</h2>
     </div>
@@ -63,7 +66,7 @@
       <label for="email">email</label>
       <input type="email" id="email" required >
     </div>
-    <input type="submit" value="Push">
+    <input type="submit" value="Push"> -->
       
 </body>
 </html>
