--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="form-grop">
       <label for="email">email</label>
-      <input type="email" id="email"  name="email" pattern="[a-z0-9._-]+@[a-z0-9-]+\.[a-z]{2,4}" placeholder="name@gmail.com" required>
+      <input type="email" id="email"  name="email" autofocus pattern="[a-z0-9._-]+@[a-z0-9-]+\.[a-z]{2,4}" placeholder="name@gmail.com" required>
     </div>
     <input type="submit" class="button" value="Push">
     <script src="script.js"></script>
